Fix sidebar linking

--- a/pages/staff.html
+++ b/pages/staff.html
@@ -111,6 +111,6 @@
 <tbody id="staff-list">
 </tbody>
 
-  <script src="staff.js"></script>
+<script src="../script/staff.js"></script>
 </body>
 </html>
