--- a/pages/teams.html
+++ b/pages/teams.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/sidebar.css">
     <link rel="stylesheet" href="../styles/teams.css">
-    <title>Overview</title>
+    <title>Teams</title>
 </head>
 <body>
     <nav id="sidebar">
